Tidied formatting, titles, descriptions, removed files from data folder

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: Internet Jokes from 2017 (Working Title)
+  title: Investigating Sociological & Marginalised Themes in Jokes
   navbar:
     right:
       - icon: github
